# django-selectel-storage

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  Makefile  Pipfile  README.rst  coverage.rc  pyproject.toml  setup.cfg  setup.py  tests.py
django_selectel_storage/: __init__.py  apps.py  compat.py  exceptions.py  models.py  selectel.py  storage.py  tests.py  utils.py
docs/: usage.rst
docs/source/: changelog.rst  conf.py  configuration.rst  index.rst  install.rst  introduction.rst
tests/: conftest.py  test_legacy.py  test_selectel.py  test_utils.py
tests/storage_api_methods/: test_delete.py  test_exists.py  test_list_dir.py  test_open.py  test_save.py  test_selectel.py  test_size.py  test_url.py
