[tool.poetry]
name = "django-selectel-storage"
version = "1.0.2"
description = "A Django storage backend allowing you to easily save user-generated and static files inside Selectel Cloud storage rather than a local filesystem, as Django does by default."
authors = [
    "Mikhail Porokhovnichenko <marazmiki@gmail.com>"
]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/marazmiki/django-selectel-storage"
repository = "https://github.com/marazmiki/django-selectel-storage"
keywords = ["django", "selectel", "storage", "remote storage", "http"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]



[tool.poetry.dependencies]
python = "^2.7 || ^3.5 || ^3.6 || ^3.7 || ^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
bump2version = "^0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
