[metadata]
name = django-selectel-storage
version = 1.0
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
url = https://github.com/marazmiki/django-selectel-storage
description = Allow using the Selectel Cloud as your Django application storage backend.
long_description = file: README.rst, LICENSE
platforms =
    OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires =
    requests
packages = find:

[bdist_wheel]
universal = 1

###

[tox:tox]
envlist =
    {py27}-dj{110,111}
    {py34,py35,py36,py37}-dj{110,111,20,21}

basepython =
    py27: python2.7
    py34: python3.4
    py35: python3.5
    py36: python3.6
    py37: python3.7

[testenv]
commands =
    pip install -e .
    pytest -s -v {posargs}
;    pytest -s -v --isort --flake8 {posargs} tests/storage_api_methods/test_save.py::test_save_fileobj

whitelist_externals =
    pytest

passenv =
    SELECTEL_USERNAME
    SELECTEL_CONTAINER_NAME
    SELECTEL_PASSWORD

deps =
    pytest
    pytest-django
    pytest-cov
    dj110: django>=1.10,<1.11
    dj111: django>=1.11,<2
    dj20: django>=2.0,<2.1
    dj21: django>=2.1,<2.2

[coverage:run]
source = django_selectel_storage
branch = True
omit =
    .tox/*

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:
omit =
    .tox/*
