[metadata]
name = django-selectel-storage
version = 1.0
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
url = https://github.com/marazmiki/django-selectel-storage
description = Allow using the Selectel Cloud as your Django application storage backend.
long_description = file: README.rst, LICENSE
platforms =
    OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires =
    requests
packages = find:

[bdist_wheel]
universal = 1

###

[tox:tox]
envlist =
    py27-dj{111}
    py3{5,6,7,8}-dj{111,22,30}

basepython =
    py27: python2.7
    py35: python3.5
    py36: python3.6
    py37: python3.7
    py38: python3.8

[testenv]
commands =
    pip install -e .
    pytest -s -v {posargs}

whitelist_externals =
    pytest

passenv =
    SELECTEL_USERNAME
    SELECTEL_CONTAINER_NAME
    SELECTEL_PASSWORD

deps =
    pytest
    pytest-django
    pytest-cov
    pytest-isort
    pytest-flake8
    dj111: django>=1.11,<2
    dj22: django>=2.2,<2.3
    dj30: django>=3.0,<3.1

[coverage:run]
source = django_selectel_storage
branch = True
omit =
    .tox/*

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:
omit =
    .tox/*

# See https://github.com/timothycrosley/isort#multi-line-output-modes
[isort]
multi_line_output = 3
include_trailing_comma = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = FIRSTPARTY
