[metadata]
name = django-selectel-storage
version = 0.3.1
license = MIT
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst


[options]
install_requires = 
    requests

packages = find:

[bdist_wheel]
universal = 1

###

[tox:tox]
isolated_build = True
envlist =
    py27-dj{111}
    py3{5,6,7,8}-dj{111,20,21,22,30}

basepython =
    py27: python2.7
    py35: python3.5
    py36: python3.6
    py37: python3.7
    py38: python3.8

[tox:.package]
basepython = python3

[testenv]
commands =
    poetry install 
    pytest -s {posargs}

whitelist_externals =
    poetry
    pytest

passenv =
    SELECTEL_USERNAME
    SELECTEL_CONTAINER_NAME
    SELECTEL_PASSWORD

deps =
    pytest
    pytest-django
    pytest-cov
    pytest-isort
    pytest-flake8
    dj111: django>=1.11,<2
    dj20: django>=2.0,<2.1
    dj21: django>=2.1,<2.2
    dj22: django>=2.2,<2.3
    dj30: django>=3.0,<3.1

[coverage:run]
source = django_selectel_storage
branch = True
omit =
    .tox/*

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:
omit =
    .tox/*

# See https://github.com/timothycrosley/isort#multi-line-output-modes
[isort]
multi_line_output = 3
include_trailing_comma = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = FIRSTPARTY
